--- a/styles.css
+++ b/styles.css
@@ -23,14 +23,19 @@ body{
     height: 100vh;
     font-family: var(--font-family);
     color: var(--font-color);
+    font-size: 20px;
 }
 /* The main content card itself */
 .card-container{
-    border: 2px solid white;
-    border-radius: 3px;
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-color: black;
+}
+.card-top-container{
+    border: 2px solid white;
+    border-radius: 3px;
 }
 
 /* Image div (preventing the gap above the header beneath it)  */
@@ -48,34 +53,69 @@ img{
 .header{
     /* padding: 4px; */
     text-align: center;
-    background-color: black;
 }
-.content{
-    background-color: black;
-    padding: 0 0;
+
+.score-display{
+    display: flex;
+    justify-content: space-evenly;
+    border-top: 1px solid white ;
+    border-bottom: 1px solid white ;
 }
+.player-display{
+    font-size: 22px;
+    font-weight: 700;
+}
+.score-limit{
+    display: flex;
+    justify-content: space-evenly;
+    border-top: 1px solid white ;
+}
+
 /* Buttons */
 .buttons-1{
     display: flex;
     justify-content: space-evenly;
+    /* border-top: 1px solid white ; */
+}
+.buttons-reset{
+    display: flex;
 }
 .button{
     width: 100%;
     padding: 6px 8px;
     border:none;
-    border-radius: 1px;
     font-family: 'Cormorant Unicase', serif;
     font-weight: 600;
 }
 #button-1{
-    background-color: rgba(90, 195, 90);
+    background-color: rgba(90, 195, 90, 0.781);
     color: white;
+}
+#button-1:hover{
+    background-color: rgba(90, 195, 90);
+    cursor: pointer;
 }
 #button-2{
-    background-color: rgb(90, 90, 219);
+    background-color: rgb(90, 90, 219,0.781);
     color: white;
 }
+#button-2:hover{
+    background-color: rgb(90, 90, 219);
+    cursor: pointer;
+    }
+
 #button-reset{
-    background-color: rgba(214, 67, 67);
+    background-color: rgb(187, 34, 34);
     color: white;
+}
+#button-reset:hover{
+    background-color: rgb(245, 72, 72);
+    cursor: pointer;
+}
+#button-3{
+    background-color: grey;
+}
+#button-3:hover{
+    background-color: rgb(184, 184, 184);
+    cursor: pointer;
 }
