--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,39 @@ body{
     background-image: url('/images/chessBackgroundImage.jpg');
     background-size: cover;
 }
+
+.nav{
+    position: fixed;
+    top:0;
+    left: 5px;
+    z-index: 100;
+    width: 100%;
+    height: 40px;
+}
+.return-button{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background-color: #ffffff;
+    color: black;
+    margin: .5rem 2rem;
+    font-size: .75rem;
+    font-weight: bold;
+    outline: none;
+    border: none;
+    padding: .5rem .5rem;
+    font-family: 'Cormorant Unicase', serif;
+}
+
+.return-button:hover{
+    background-color: rgb(200, 200, 200);
+    cursor: pointer;
+}
+
+#return-image{
+    height: 20px;
+    margin-right: 5px;
+}
 /* Centralising the container content */
 .container{
     display: flex;
@@ -44,7 +77,7 @@ body{
     flex-direction: column;
 }
 /* Ensuring the Image itself is responsive */
-img{
+#main-imgage{
    width: 100%;
    height: auto;
 }
